# izyploy-examples

./: README.md
java/: Dockerfile  README.md  pom.xml
java/src/main/java/com/example/izyploy/: HelloController.java  IzyployJavaApplication.java
java/src/test/java/com/example/izyploy/: HelloControllerTest.java
php/: Dockerfile  README.md  composer.json  entrypoint.sh
php/public/: index.php
php/tests/: run.php
python/: Dockerfile  README.md
python/app/: main.py
python/tests/: test_app.py
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
